# Proyecto_Avance

./: .dockerignore  .gitignore  Dockerfile  GUIA_TESTING.md  LICENSE  Proyecto MLOps .ipynb  README.md  README_DOCKER.md  docker-compose.yml  obesity_model_ready_from_clean.csv  obesity_pca_from_clean.csv  requirements.txt  run_api.py
.dvc/: config
API/: INTEGRACION_MODELO.md  README.md  __init__.py  main.py  routers.py  schemas.py  services.py  test_single_predict.py
Proyecto_Avance/: Makefile  README.md  pyproject.toml
Proyecto_Avance/docs/docs/: index.md
Proyecto_Avance/mlops_obesidad/: features.py  plots.py
Proyecto_Avance/mlops_obesidad/modeling/: predict.py  train.py
data/: obesity_clean_raw_v2.csv  obesity_model_ready.csv
data/interim/: obesity_clean_raw.csv.dvc
data/processed/: obesity_eda_summary_v2.csv  obesity_model_ready.csv.dvc
data/raw/: obesity_estimation_original.csv.dvc
docs/: mkdocs.yml
mlops_obesidad/: __init__.py  dataset.py  transformers.py
mlops_obesidad/inference/: __init__.py  model_loader.py  (+1 more)
models/: deployment.py  xgboost_model_artifacts.pkl
notebooks/: 1.0-initial-data-exploration.ipynb  2.0_Modelling.ipynb  3.0.Modeling_pipeline.ipynb  3.0_Modeling_pipeline.ipynb  5.0_DataDrift.ipynb  6.0_Final_model_object.ipynb  MLFlow_Pipeline.ipynb  Modeling_pipeline.ipynb  Proyecto MLOps .ipynb
reports/: Análisis de requerimientos.docx  Machine Learning Canvas (v1.2) (1).docx  obesity_clean_report_v2.docx
tests/: test_api_integration.py  test_api_services.py  test_data.py  test_inference.py  test_preprocessing.py
(+2 files in other folders)
